<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.masteradar.diabetesdataholder.records">

    <TextView
        android:id="@+id/currentUserText"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@android:color/black"
        android:text="TextView"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_note_add_black_48dp"
        android:background="@color/colorPrimary"
        android:text="@string/addNew"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-light"
        android:textSize="20sp"
        style="?android:borderlessButtonStyle"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="153dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="48dp" />

    <Button
        style="?android:borderlessButtonStyle"
        android:id="@+id/recordButton"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-light"
        android:textSize="20sp"
        android:drawableTop="@drawable/ic_chrome_reader_mode_black_48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/records"
        android:background="@color/colorPrimary"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/addButton"
        tools:layout_constraintBaseline_creator="1" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/logout"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="20sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="35dp"
        android:background="@color/colorButton2"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="35dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="17dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
