<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/app_logo"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="22sp"
        android:fontFamily="sans-serif-light"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="text"
        android:hint="username"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="35dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="161dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:background="@color/colorButton1"

        android:gravity="center"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="35dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="72dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="89dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userName" />

    <Button
        android:id="@+id/signUpButton"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/colorButton2"
        android:text="@string/createId"

        android:textColor="#fff"

        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="34dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="14dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>